// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListRow should match snapshot 1`] = `
<CustomListRow
  enabled={true}
  id="21345"
  onPress={[Function]}
  theme={Object {}}
>
  <Connect(ProfilePicture)
    size={32}
    userId="21345"
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": 5,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "color": undefined,
            "fontSize": 15,
          }
        }
      >
        user
      </Component>
    </Component>
    <Component>
      <Component
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": undefined,
            "fontSize": 15,
            "marginLeft": 5,
          }
        }
      >
        (@user)
      </Component>
    </Component>
  </Component>
</CustomListRow>
`;

exports[`UserListRow should match snapshot for  currentUser with (you) populated in list 1`] = `
<CustomListRow
  enabled={true}
  id="21345"
  onPress={[Function]}
  theme={Object {}}
>
  <Connect(ProfilePicture)
    size={32}
    userId="21345"
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": 5,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "color": undefined,
            "fontSize": 15,
          }
        }
      >
        user
      </Component>
    </Component>
    <Component>
      <Component
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": undefined,
            "fontSize": 15,
            "marginLeft": 5,
          }
        }
      />
    </Component>
  </Component>
</CustomListRow>
`;

exports[`UserListRow should match snapshot for deactivated user 1`] = `
<CustomListRow
  enabled={true}
  id="21345"
  onPress={[Function]}
  theme={Object {}}
>
  <Connect(ProfilePicture)
    size={32}
    userId="21345"
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": 5,
      }
    }
  >
    <Component>
      <Component
        style={
          Object {
            "color": undefined,
            "fontSize": 15,
          }
        }
      >
        user
      </Component>
    </Component>
    <Component>
      <Component
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": undefined,
            "fontSize": 15,
            "marginLeft": 5,
          }
        }
      />
    </Component>
  </Component>
</CustomListRow>
`;
